Add error constants Small code refactor